apps/auth/manifests/traefik-auth/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: traefik-forward-auth
  name: traefik-forward-auth
  namespace: auth
spec:
  ports:
  - name: auth-http
    port: 4181
    targetPort: 4181
  selector:
    app: traefik-forward-auth
  type: ClusterIP
