apps/auth/manifests/traefik-auth/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  labels:
    app: traefik
  name: traefik-forward-auth
  namespace: auth
spec:
  ingressClassName: traefik
  rules:
  - host: auth.ankhmorpork.thaum.xyz
    http:
      paths:
      - backend:
          service:
            name: traefik-forward-auth
            port:
              name: auth-http
        path: /_oauth
        pathType: Prefix
      - backend:
          service:
            name: oauth2-proxy
            port:
              name: http
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - auth.ankhmorpork.thaum.xyz
    secretName: oauth2-proxy-tls
